--- a/index.html
+++ b/index.html
@@ -7,14 +7,8 @@
     <title>React + TypeScript + Replit</title>
   </head>
   <body>
+    <p>Hello There</p>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
-		
-    <!--
-    This script places a badge on your repl's full-browser view back to your repl's cover
-    page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-    teal, blue, blurple, magenta, pink!
-    -->
-    <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script>
   </body>
 </html>
