--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>github is trash</title>
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
   </head>
   <body>
-    <p>Hello There</p>
+    <p>Hello There hola failure</p>
     <div id="root"></div>
-    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
