--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="./index.js"></script>
+    <script type="module">
+import App from './App'
+
+ReactDOM.createRoot(document.getElementById('root')).render(
+	<React.StrictMode>
+		<App />
+	</React.StrictMode>
+)
+    </script>
   </body>
 </html>
